#234 Initial support for java.desktop module